# vibe

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CurrentTrackInfo.tsx  SpotifyAuth.tsx  SpotifyIcon.tsx
src/hooks/: useEffectOnce.ts  useInterval.ts  useSpotify.ts
src/lib/: spotify.ts  store.ts
