[package]
name = "vibe"
version = "0.1.2"
description = "A Spotify companion overlay to help you see what you're listening to."
authors = ["Andre Lew <me@aelew.com>"]
license = "MIT"
repository = "https://github.com/aelew/vibe"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "http-all", "window-start-dragging", "macos-private-api", "shell-open"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-oauth = "0.0.0-alpha.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
